# flutter-cli

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  install.sh  uninstall.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  release.yml
crates/fl-adb/: Cargo.toml
crates/fl-adb/src/: lib.rs  mdns.rs  pair.rs  parse.rs  reconnect.rs  runner.rs  watcher.rs
crates/fl-cli/: Cargo.toml
crates/fl-cli/src/: build_cmd.rs  clean_cmd.rs  cli.rs  devices_cmd.rs  doctor_cmd.rs  external_cmd.rs  init_cmd.rs  main.rs  multi.rs  pub_cmd.rs  run_cmd.rs  test_cmd.rs
crates/fl-cli/tests/: headless_run.rs
crates/fl-core/: Cargo.toml
crates/fl-core/src/: config.rs  events.rs  lib.rs
crates/fl-flutter/: Cargo.toml
crates/fl-flutter/src/: daemon.rs  doctor_parse.rs  lib.rs  parse.rs  path.rs  pub_parse.rs  test_parse.rs
crates/fl-ios/: Cargo.toml
crates/fl-ios/src/: lib.rs  parse.rs  watcher.rs  xcrun.rs
crates/fl-tui/: Cargo.toml
crates/fl-tui/src/: app.rs  ide.rs  lib.rs  render.rs  runner.rs  spinner.rs  splash.rs  theme.rs  view.rs
crates/fl-tui/src/panels/: devices.rs  logs.rs  mod.rs  network.rs  performance.rs
crates/fl-tui/src/snapshots/: fl_tui__render__tests__dashboard_snapshot.snap
crates/fl-tui/src/views/: build_view.rs  clean_view.rs  device_picker.rs  doctor_view.rs  mod.rs  pub_view.rs  test_view.rs
crates/fl-vmservice/: Cargo.toml
crates/fl-vmservice/src/: client.rs  ext.rs  lib.rs  mdns.rs  rpc.rs  tests_support.rs
crates/flutter-cli/: Cargo.toml
crates/flutter-cli/src/: build_cmd.rs  cli.rs  config.rs  devices_cmd.rs  external_cmd.rs  init_cmd.rs  main.rs  multi.rs  run_cmd.rs  test_cmd.rs
crates/flutter-cli/tests/: headless_run.rs
docs/superpowers/plans/: 2026-05-18-failover-hardening.md  2026-05-18-fl-cli-mvp1.md  2026-05-18-flutter-commands.md  2026-05-18-ios-support.md  2026-05-18-multi-devices.md
docs/superpowers/specs/: 2026-05-18-failover-hardening-design.md  2026-05-18-fl-cli-design.md  2026-05-18-flutter-commands-design.md  2026-05-18-ios-support-design.md  2026-05-18-multi-devices-design.md  2026-05-19-screenshot-key-design.md
homebrew/: fl.rb
npm/: README.md  install.js  package.json
tests/fixtures/scenarios/: build_apk.txt  doctor.txt  ios_one_device.json  multi_devices.txt  no_device.txt  nominal.txt  pub_get.txt  pub_outdated.txt  sim_one_booted.json  test_basic.txt  wifi_drop.txt
