[workspace]
resolver = "2"
members = [
    "crates/fl-core",
    "crates/fl-adb",
    "crates/fl-ios",
    "crates/fl-flutter",
    "crates/fl-vmservice",
    "crates/fl-tui",
    "crates/fl-cli",
]

[workspace.package]
edition = "2021"
rust-version = "1.79"
license = "MIT"
authors = ["Antoine Gonthier"]
repository = "https://github.com/Antoinegtir/flutter-cli"
homepage = "https://github.com/Antoinegtir/flutter-cli"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec", "io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
clap = { version = "4.5", features = ["derive"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"
async-trait = "0.1"
bytes = "1.5"
chrono = "0.4"
toml = "0.8"
directories = "5.0"
url = "2.5"
mdns-sd = "0.11"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
