[package]
name = "fl-adb"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
fl-core = { path = "../fl-core" }
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
bytes.workspace = true
