[package]
name = "fl-adb"
version = "0.4.5"
edition.workspace = true
rust-version.workspace = true

[dependencies]
fl-core = { path = "../fl-core" }
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
bytes.workspace = true
mdns-sd.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
