[package]
name = "fl-cli"
version = "0.1.0"
description = "Modern Flutter CLI with seamless USB→WiFi hot reload"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "fl"
path = "src/main.rs"

[dependencies]
fl-core = { path = "../fl-core" }
fl-adb = { path = "../fl-adb" }
fl-flutter = { path = "../fl-flutter" }
fl-vmservice = { path = "../fl-vmservice" }
fl-tui = { path = "../fl-tui" }
fl-ios = { path = "../fl-ios" }
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
directories.workspace = true
futures-util.workspace = true
crossterm.workspace = true
serde_json.workspace = true
