[package]
name = "fl-cli"
version = "0.1.0"
description = "Modern terminal UI for Flutter — hot reload across N devices, live HTTP/perf inspector, drops into your shell so 'flutter run' becomes the dashboard."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["flutter", "dart", "tui", "cli", "mobile"]
# crates.io allows 5 categories. Picked for max search overlap with
# devs looking for terminal tools / dev productivity.
categories = ["command-line-utilities", "development-tools", "development-tools::debugging"]

[[bin]]
name = "flutter-cli"
path = "src/main.rs"

[dependencies]
fl-core = { path = "../fl-core" }
fl-adb = { path = "../fl-adb" }
fl-flutter = { path = "../fl-flutter" }
fl-vmservice = { path = "../fl-vmservice" }
fl-tui = { path = "../fl-tui" }
fl-ios = { path = "../fl-ios" }
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
directories.workspace = true
futures-util.workspace = true
crossterm.workspace = true
serde_json.workspace = true
chrono.workspace = true
