[package]
name = "fl-flutter"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
fl-core = { path = "../fl-core" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
