[package]
name = "fl-tui"
version = "0.4.2"
edition.workspace = true
rust-version.workspace = true

[dependencies]
fl-core = { path = "../fl-core" }
anyhow.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
chrono.workspace = true
futures-util.workspace = true
termbg.workspace = true

[dev-dependencies]
insta = "1.34"
tokio = { workspace = true, features = ["test-util"] }
