[package]
name = "fl-tui"
version = "0.4.6"
edition.workspace = true
rust-version.workspace = true

[dependencies]
fl-core = { path = "../fl-core" }
anyhow.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
chrono.workspace = true
futures-util.workspace = true
termbg.workspace = true
# Cross-platform clipboard so the `c` keybind works on Linux + Windows,
# not just macOS via `pbcopy`. arboard talks directly to the OS
# clipboard APIs (X11 / Wayland / NSPasteboard / Windows clipboard).
arboard = "3"

[dev-dependencies]
insta = "1.34"
tokio = { workspace = true, features = ["test-util"] }
