[package]
name = "fl-vmservice"
version = "0.4.6"
edition.workspace = true
rust-version.workspace = true

[dependencies]
fl-core = { path = "../fl-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
tracing.workspace = true
url.workspace = true
mdns-sd.workspace = true
